2018-04-11  Mark Wielaard  <mark@klomp.org>

	* run-addrcfi.sh: Adjust expected rule for aarch64 sp.

2018-04-03  Mark Wielaard  <mark@klomp.org>

	* testfileranges4.debug.bz2: New testfile.
	* run-dwarf-ranges.sh: Run on testfileranges4.debug.
	* tests/Makefile.am (EXTRA_DIST): Add testfileranges4.debug.bz2.

2018-03-06  Mark Wielaard  <mark@klomp.org>

	* varlocs.c (print_expr): Handle DW_OP_implicit_pointer,
	DW_OP_entry_value, DW_OP_convert, DW_OP_reinterpret,
	DW_OP_regval_type, DW_OP_deref_type, DW_OP_xderef_type and
	DW_OP_const_type.

2018-02-16  Mark Wielaard  <mark@klomp.org>

	* backtrace-subr.sh (check_native_core): Check if there is any core,
	if so, use it.

2018-02-15  Mark Wielaard  <mark@klomp.org>

	* backtrace-child.c: Include signal.h after sys/ptrace.h.
	* backtrace-dwarf.c: Include sys/wait.h and signal.h after
	sys/ptrace.h.

2018-01-25  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (check_PROGRAMS): Add dwarf-die-addr-die.
	(TESTS): Add run-dwarf-die-addr-die.sh.
	(EXTRA_DIST): Likewise.
	(dwarf_die_addr_die_LDADD): New variable.
	* dwarf-die-addr-die.c: New file.
	* run-dwarf-die-addr-die.sh: New test.

2018-02-09  Joshua Watt  <JPEWhacker@gmail.com>

	* elfstrmerge.c (main): Use FALLTHROUGH macro instead of comment.

2018-01-22  Mark Wielaard  <mark@klomp.org>

	* allfcts.c (setup_alt): Print warning when alt file couldn't be
	found.
	* run-allfcts-multi.sh: Add testcase where alt file is in a subdir
	where it cannot be found by allfcts itself (but it can by libdw).

2018-01-25  Mark Wielaard  <mark@klomp.org>

	* elfstrmerge.c (main): Initialize and check symtabshdr instead of
	symtabndx.

2018-01-14  Petr Machata  <pmachata@gmail.com>

	* testfile-sizes4.o.bz2: New test file.
	* testfile-sizes4.s: New test source.
	* run-aggregate-size.sh: Check testfile-sizes4.o v size 257.

2017-12-23  Mark Wielaard  <mark@klomp.org>

	* backtrace-subr.sh (check_native_core): Use a lock file and try
	to extract core using coredumpctl.