@@ -1,3 +1,9 @@
+2018-04-16  Mark Wielaard  <mark@klomp.org>
+
+	* testfile-ppc64-min-instr.bz2: New testfile.
+	* run-readelf-line.sh: Run against testfile-ppc64-min-instr.bz2.
+	* Makefile.am (EXTRA_DIST): Add testfile-ppc64-min-instr.bz2.
+
 2018-04-11  Mark Wielaard  <mark@klomp.org>
 
 	* run-addrcfi.sh: Adjust expected rule for aarch64 sp.
